# RosBots.archive

./: #debug.txt#  .gitignore  .gitmodules  README.md  heaptrace-gdbinit  microros_ws.code-workspace
Archive/: esp32_i2c.c
Archive/Archive/bot_parts/interfaces/: if_locomotion_drive.h
Archive/Archive/maqueen-esp32/: sdkconfig.save
Archive/Archive/maqueen-esp32/include/: locomotion_control.h  maqueen.h  maqueen_motor.h
Archive/Archive/maqueen-esp32/main/: main.c  maqueen_motor.c
Archive/I2Cdev/: CMakeLists.txt  I2Cdev.cpp
Archive/microros_app/: microros_app.h
design/: battleBots.qea-journal
design/MicroRos/EARoot/EA1/: EA2.htm
design/MicroRos/EARoot/EA2/: EA75.htm
design/MicroRos/js/data/: 0154685B-ED25-42d0-BF40-0DBED60B64AB.xml  072A0809-6A9C-4137-B5E4-60A6682198AC.xml  076FEE10-BB21-41c8-9CAF-20B2DA5130BA.xml  0A854932-6F7C-4f21-AEAA-F7FB756D0B81.xml  0B0F880B-C342-4316-923C-3EF9E351A708.xml  0B2DE511-CA37-45b2-82D2-D234B533D279.xml  0BA4637D-486A-486a-9648-E01C6E44A15D.xml  0F0CDF18-0D45-45cd-BBC0-9256840C7E01.xml  0FF0DDCA-44B6-4b10-A85A-AB4B9411532C.xml  12D81E0D-AB1F-4854-8F72-22E9F67C7FC9.xml  1349E2A2-8746-45c5-8693-0DEC315C89D7.xml  14A5BBE8-5BE0-4a00-94D4-9581B8B5BED4.xml  15163CCF-81C6-4124-AF6A-FF69582CA1C4.xml  19C26EF0-0DC0-4d1f-9FB9-6168A421B05D.xml  1B30AFAC-2B23-430b-BF76-267C4965125B.xml  1D4875A7-42E1-4326-9976-46DAD6B16347.xml  1E48297E-405A-489c-933A-DDF9A05DEB5D.xml  24601768-B937-443a-B93F-BA52938F61A0.xml  2BA7B4DB-5DF0-426d-96D1-37EAA2441063.xml  2CD9C3EB-3BA8-4d53-820E-6737E458652D.xml  2FA8B6B5-E93F-436d-8438-77FF952AC99E.xml  31AF16ED-865B-4e45-AD4B-73B740937D2B.xml  352173BC-B7E1-4077-B058-EC9B93144E54.xml  38B6318E-C794-453f-8DB2-D9A22E133540.xml  417F3054-4140-4c15-80CE-7CED9C37FD6B.xml  44913EF6-01BA-470f-B9DF-E749D51F15C3.xml  4967E9B9-D252-41cb-9594-3C1C19A42F0C.xml  4A714327-0126-49f4-9125-3E0155870A7C.xml  50429FFA-2C53-40db-B60D-39771B8AD4C9.xml  5086CE71-75E7-4513-8BAE-15DE4BA2A6FB.xml  550B282E-F414-4b8e-84EB-48E2FAD89544.xml  5C9655AE-B3E6-4e35-8B67-301185EA13FB.xml  5D504301-A1AE-4da1-8F4B-C2076723B24B.xml  5EF94B8F-6C12-453b-850F-5217536760F6.xml  673F47CE-D067-45f1-A252-2741792BEA8D.xml  6F6AF090-E6E5-4dc8-8925-5F3AABF5AB6F.xml  71FC722B-5143-4d51-B967-28225120ED79.xml  7645EE7B-55F3-4ca4-9BBA-6988A06B9BD2.xml  79E3AE54-8C61-43f3-B4BC-66F7B06F512B.xml  7D23E690-4600-4590-8989-68F320F5E6EF.xml  (+31 more)
docker/microros-espidf/: Dockerfile  startNode.sh
docker/ros/: Dockerfile  Dockerfile.old  README.md  ipvlan-office.sh  ipvlan.sh  macvlan.sh  runXterm.sh  startCygwinX.bat  startNodeMac.sh  startNodeUnix.sh
docker/ros/files/: install_microros_agent.sh  ros_entrypoint.sh  ros_profile.sh
docs/MicroROS/html/: blank.htm  index.htm  toc.htm
docs/MicroROS/html/css/: ea.css  eacont.css
docs/MicroROS/html/js/: displayToc.js
microros_ws/: .gitignore  CMakeLists.txt  libmicroros.sym
microros_ws/Archive/bot_parts/interfaces/: if_I2C_driver.h  if_sensor_data_source.h
microros_ws/Archive/maqueen-esp32/: CMakeLists.txt  sdkconfig
microros_ws/Archive/maqueen-esp32/include/: esp32_i2c.h  exc_sub_timer.h  microbot.h
microros_ws/Archive/maqueen-esp32/main/: exc_sub_timer.c  observability.c
microros_ws/Archive/microros_app/: CMakeLists.txt  microros_app.cpp  microros_app.h
microros_ws/assemblies/esp32-joystick/: .ninja_deps  .ninja_log  CMakeLists.txt  sdkconfig
microros_ws/assemblies/esp32-joystick/main/: ros_app.cpp
microros_ws/assemblies/esp32-obn/: CMakeLists.txt  sdkconfig  sdkconfig.old
microros_ws/assemblies/esp32-obn/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  main.h
microros_ws/assemblies/esp32-range-buggy/: CMakeLists.txt  sdkconfig  sdkconfig.old
microros_ws/assemblies/esp32-range-buggy/include/: maqueen.h
microros_ws/assemblies/esp32-range-buggy/main/: CMakeLists.txt  main.cpp  main.h  ros_app.cpp
microros_ws/assemblies/mptest/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.old  sdkconfig.old2  sdkconfig.sort.2
microros_ws/assemblies/mptest/main/: CMakeLists.txt  Kconfig.projbuild  ros_app.cpp  ros_app.h
microros_ws/assemblies/mptest2/main/: CMakeLists.txt  ros_app.h
microros_ws/bot_parts/components/locomotion_mgr/: locomotion_mgr.cpp  locomotion_mgr.h
microros_ws/bot_parts/components/microros_app/: microros_app.cpp  microros_app.h
microros_ws/bot_parts/components/microros_timer_mgr/: microros_timer_mgr.cpp  microros_timer_mgr.h  timer_task.h
microros_ws/bot_parts/drivers/esp_I2Cdev/: esp_I2Cdev.cpp  esp_I2Cdev.h
microros_ws/bot_parts/drivers/maqueen_mbits_drive/: maqueen_mbits_drive.cpp  maqueen_mbits_drive.h
microros_ws/bot_parts/interfaces/: I2C_driver_iface.h  locomotion_drive_iface.h  ros_subscription_iface.h  sensor_data_source_iface.h
microros_ws/bot_parts/sensors/MPU9250/: MPU9250.cpp  MPU9250.h  mpu9250_sensor_data_src.cpp
microros_ws/bots/maqueen-esp32/: CMakeLists.txt
microros_ws/bots/maqueen-esp32-obn1/: CMakeLists.txt
microros_ws/bots/maqueen-esp32-obn1/include/: maqueen.h
microros_ws/bots/maqueen-esp32-obn1/main/: CMakeLists.txt  exc_sub_timer.c  main.c  main.cpp
microros_ws/bots/maqueen-esp32/main/: CMakeLists.txt  Kconfig.projbuild  esp32_i2c.c  exc_base.cpp  exc_sub_velocity.c  (+3 more)
microros_ws/components/esp32/micropython_min/: CMakeLists.txt
microros_ws/components/interfaces/: if_I2C_driver.h  if_device_data_source.h  if_locomotion_drive.h  if_microros_app.h  if_platform.h  if_ros_app.h  if_ros_publisher.h  if_ros_subscription.h  if_rtos.h
microros_ws/components/ros/: microros_locomotion_mgr.cpp  microros_locomotion_mgr.h  microros_timer_mgr.cpp  microros_timer_mgr.h  microros_timer_task.h
microros_ws/extra_packages/micropython/: CMakeLists.txt  old.CMakeLists.txt
microros_ws/extra_packages/micropython/src/: main.c  mpconfigport.h  mpmain.c  uart_core.c
microros_ws/extra_packages/micropython/src/mp_uros/: mp_uros.cpp  mp_uros_module.c  mp_uros_module.h
microros_ws/extra_packages/microros/: .gitignore  libmicroros.mk
microros_ws/libs/microros/: CMakeLists.txt
ros_ws/: startTeleoop.sh
ros_ws/agent/: startAgent.sh
(+1923 files in other folders)
